--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ border: 0px;}
 margin: 50px 0px 0px 0px;}
 /*responsive media query*/
 @media screen and (max-width:576px) {
-    header{padding: 20px;}
+    header{padding: 25px;}
     nav{flex-direction: column;}
 }
 @media screen and (min-width:576px) and (max-width:960px){
@@ -86,6 +86,7 @@ margin-bottom: 30px;}
 .design-type{color:  #131313;
     font-size: 20px;
     font-weight: 600;}
+.version .design-details{width: 450px;}
 .design-details{color: #727272;
     font-size: 16px;
     font-weight: 400;
@@ -146,3 +147,50 @@ margin-top: 0px;}
 text-align: center;
 margin-top: 10px;
 margin-bottom: 20px;}
+@media screen and (max-width:576px) {
+    .featur-img{grid-template-columns: repeat(1,1fr);}
+    .featur-container{
+        flex-direction: column;
+        padding: 10px;;}
+    .featur-description{padding-top: 10px;}
+    /*design tab*/
+    .design{flex-direction: column;
+    padding: 10px;}
+    .design-title{width: auto;}
+    .design-description>.design-details{width: auto;}
+    .version .design-details{width: auto;}
+    .btn-secondary{padding: 15px;
+        top: -80px;
+        left: -10px;}
+    .facts{width: auto;}
+    .review{margin: 10px;}
+    .card{flex-direction: column;
+    gap: 10px;}
+}
+footer{margin: 100px 70px 50px 70px;}
+.sponser-title{color: #131313;
+    font-size: 45px;
+    font-weight: 700;}
+.sponser{text-align: center;}
+.sponser>p{width: 500px;
+text-align: center;
+padding: 10px 350px;}
+.sponser-pic{padding-top: 50px;
+    display: flex;
+justify-content: space-around;}
+.security>p{color: #424242;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 400;}
+.security{margin-top: 150px;
+border-radius: 8px;
+background: #FFF4E7;
+padding-top: 20px;
+padding-bottom: 20px;}
+@media screen and (max-width:576px) {
+    footer{margin:100px 10px 10px 10px;} 
+    .sponser>p{width: auto;
+    padding: 10px;} 
+    .sponser-pic{flex-direction: column;
+    gap: 50px;}  
+}
